Attempt to fix user dropdown jumping button out of frame unsuccessfully

--- a/app/assets/stylesheets/components/webplayer/_webplayer_header.scss
+++ b/app/assets/stylesheets/components/webplayer/_webplayer_header.scss
@@ -64,6 +64,7 @@
   position: relative;
   white-space: nowrap;
   pointer-events: auto;
+  min-height: 5px;
 }
 
 .webplayer-top-bar-user-button {
@@ -80,6 +81,7 @@
   color: white;
   padding: 2px;
   font-size: 14px;
+  box-sizing: border-box;
 }
 
 .webplayer-top-bar-user-button:hover {
@@ -123,4 +125,52 @@
   margin-right: 6px;
   margin-left: 8px;
   color: #b3b3b3;
+}
+.webplayer-topbar-user-dropdown-menu {
+  position: relative;
+}
+
+.webplayer-dropdown-menu {
+  right: 0;
+  top: 50px;
+  min-width: 100%;
+  background-color: #282828;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, .1);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, .7);
+  pointer-events: auto;
+  position: absolute;
+  // top: 100%;
+  // margin-top: 8px;
+  box-sizing: border-box;
+}
+
+.webplayer-dropdown-menu:first-child {
+  border-radius: 4px 4px 0 0;
+}
+
+.webplayer-dropdown-option {
+  width: 100%;
+  padding: 3px 20px;
+  line-height: 32px;
+  background: none;
+  user-select: none;
+  cursor: default;
+  color: #b3b3b3;
+  display: flex;
+  align-items: center;
+  position: relative;
+  text-decoration: none;
+
+}
+
+.webplayer-dropdown-option:hover {
+  color: white;
+  background-color: #333;
+  text-decoration: underline;
+
+}
+
+.webplayer-dropdown-menu:last-child {
+  border-radius: 0 0 4px 4px;
 }
