--- a/app/assets/stylesheets/components/webplayer/_webplayer_main.scss
+++ b/app/assets/stylesheets/components/webplayer/_webplayer_main.scss
@@ -52,22 +52,26 @@
 
 .playlist-item-container {
   flex: 1;
+  min-height: 2px;
   position: relative;
   padding: 20px 20px 16px;
   background: #282828;
   border-radius: 8px;
   isolation: isolate;
-  width: 180.5px;
+  // width: 180.5px;
+  width: 100%;  
 }
 
 .playlist-item-content-container {
   height: 100%;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
+  user-select: none;
+  // flex: 1;
+  // display: flex;
+  // flex-direction: column;
 }
 
 .playlist-item-image-container {
+  min-height: 129px;
   position: relative;
   background-color: #333;
   box-shadow:
